# creative_coding

./: .gitignore  Makefile  Pipfile  README.md  config.yml  pyproject.toml  setup.py  tox.ini
genart/: color.py  (+8 more)
python/: pyproject.toml  setup.cfg  tox.ini
python/genart/: color.py  main.py  numbering.py
python/genart/bubblechamber/: __init__.py  models.py  render.py
python/genart/cloudscript/: generator.py  layout.py  models.py  simulation.py  test_jitter.txt
python/genart/colorhoney/: base.py  palette.py  tokki.py
python/genart/selene/: constellation.py
python/genart/techniques/: pointillism.py
python/tests/: conftest.py
python/tests/benchmarks/: test_bench_circlepacker.py
python/tests/unit/: test_geom.py
rust/chaosymmetry/: Cargo.toml
rust/chaosymmetry/config/: astigmatism.toml  catherine_wheel.toml  circular_saw.toml  clam_triple.toml  emperors_cloak.toml  fifty_nations.toml  fish_and_eye_2.toml  french_glass.toml  halloween.toml  ima_logo_4.toml  mayan_bracelet.toml  pentagon_attractor.toml  sierpinski_pentagon.toml  swirling_streamers.toml  the_bee.toml  the_sand_dollar.toml  the_trampoline.toml  variation_on_the_sierpinski_square.toml
rust/chaosymmetry/config/book/: astigmatism.toml  asymmetric_coloring.toml  cashmere.toml  catherine_wheel.toml  chaotic_flower.toml  circular_saw.toml  clam_triple.toml  emperors_cloak.toml  fifty_nations.toml  fish_and_eye_1.toml  fish_and_eye_2.toml  french_glass.toml  golden_flintstone.toml  gothic_medaillon.toml  halloween.toml  ima_logo_1.toml  ima_logo_2.toml  ima_logo_3.toml  ima_logo_nonpoly.toml  kachina_dolls.toml  lace_by_nine.toml  magnifying_fractal.toml  mayan_bracelet.toml  mercedes_benz.toml  overlaid_fractal.toml  pentagon_attractor.toml  santa_chiara_icon.toml  sierpinski_hexagon.toml  sierpinski_pentagon.toml  sierpinski_triangle.toml  snowflake.toml  star_of_david.toml  strict_fractal.toml  sunflower.toml  swirling_streamers.toml  the_bee.toml  the_pentacle.toml  the_sand_dollar.toml  the_trampoline.toml  trinity_in_red.toml  (+3 more)
rust/chaosymmetry/src/: chaos.rs  color.rs  figures.rs  main.rs  symmetry.rs
rust/chaosymmetry/style/: bloom.toml  dual.toml  dusk.toml  grayscale.toml  knight.toml  shards.toml  something.toml
(+64 files in other folders)
