[tool.poetry]
name = "genart"
version = "0.1.0"
description = "Generative art playground"
authors = ["Oliver Hofkens <oli.hofkens@gmail.com>"]
packages = [
    { include = "genart" }
]

[tool.poetry.scripts]
genart = 'genart.main:main'

[tool.poetry.dependencies]
python = "^3.9"

pycairo = "^1.20"
numpy = "^1.21"

black = { version = "==20.8b1", optional = true }
flake8 = { version = "^3.8", optional = true }
isort = { version = "^5.7", optional = true }
mypy = { version = "^0.800", optional = true }
pytest = { version = "^6.2", optional = true }
pytest-cov = { version = "*", optional = true }

[tool.poetry.extras]
linting = ["flake8", "black", "isort", "mypy"]
testing = ["pytest", "pytest-cov"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

