[package]
name = "chaosymmetry"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.28", features = ["derive"] }
env_logger = "0.11.6"
itertools = "0.14.0"
log = "0.4.22"
num = "0.4.3"
pixels = "0.15.0"
png = "0.17.16"
rand = "0.9.0"
serde = {version  = "1.0.217", features = ["derive"]}
toml = "0.8.20"
typetag = "0.2.19"
winit = "0.30.8"
